--- a/src/AplicacionNavegacion/resolprom.fxml
+++ b/src/AplicacionNavegacion/resolprom.fxml
@@ -7,8 +7,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-
-<VBox prefHeight="423.0" prefWidth="614.0" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<VBox prefHeight="423.0" prefWidth="614.0" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="AplicacionNavegacion.ResolpromController">
    <children>
       <Label prefHeight="72.0" prefWidth="233.0" text="Enunciado" />
       <RadioButton mnemonicParsing="false" text="RadioButton" />
