--- a/src/AplicacionNavegacion/VentanaAvatarFXML.fxml
+++ b/src/AplicacionNavegacion/VentanaAvatarFXML.fxml
@@ -13,8 +13,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-
-<VBox styleClass="root" stylesheets="@estiloAvatarChooser.css" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="AplicacionNavegacion.AvatarChooserController">
+<VBox styleClass="root" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="AplicacionNavegacion.AvatarChooserController">
    <children>
       <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="450.0" prefWidth="600" styleClass="card">
           <bottom>
@@ -41,7 +40,7 @@
                            <VBox spacing="10">
                                <Label style="-fx-font-size: 16px;" styleClass="form-label" text="Vista previa:">
                               <VBox.margin>
-                                 <Insets left="10.0" top="10.0" />
+                                 <Insets left="10.0" top="30.0" />
                               </VBox.margin>
                            </Label>
                                <ImageView fx:id="previewImage" fitHeight="235.0" fitWidth="200" preserveRatio="true" style="-fx-effect: dropshadow(gaussian, black, 20, 0, 0, 0);">
@@ -93,4 +92,9 @@
          </stylesheets>
       </BorderPane>
    </children>
+   <stylesheets>
+      <URL value="@estiloAvatarChooser.css" />
+      <URL value="@../estilos/estiloAvatarChooser.css" />
+      <URL value="@../estilos/Registro.css" />
+   </stylesheets>
 </VBox>
