--- a/src/AplicacionNavegacion/FXMLVentanaHistorial.fxml
+++ b/src/AplicacionNavegacion/FXMLVentanaHistorial.fxml
@@ -3,81 +3,56 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="456.0" prefWidth="607.0" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="AplicacionNavegacion.VentanaHistorialController">
+
+<VBox alignment="CENTER" prefHeight="800.0" prefWidth="900.0" styleClass="root" stylesheets="@estiloHistorial.css" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="AplicacionNavegacion.VentanaHistorialController">
    <children>
-      <HBox alignment="CENTER" prefHeight="66.0" prefWidth="607.0">
+      <VBox alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="749.0" prefWidth="830.0" spacing="10.0" styleClass="enunciado-box" stylesheets="@estiloHistorial.css">
          <children>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Historial">
-               <font>
-                  <Font size="36.0" />
-               </font>
-               <HBox.margin>
-                  <Insets top="15.0" />
-               </HBox.margin>
-            </Text>
-         </children>
-      </HBox>
-      <HBox alignment="CENTER" prefHeight="54.0" prefWidth="607.0">
-         <children>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Filtrar fecha:">
-               <HBox.margin>
-                  <Insets bottom="5.0" right="10.0" />
-               </HBox.margin>
-               <font>
-                  <Font size="18.0" />
-               </font>
-            </Text>
-            <DatePicker fx:id="dateFilter" />
-         </children>
-      </HBox>
-      <Pane prefHeight="296.0" prefWidth="607.0">
-         <children>
-            <TableView fx:id="tableHistory" layoutX="16.0" prefHeight="294.0" prefWidth="575.0">
-              <columns>
-                <TableColumn fx:id="colDate" prefWidth="127.5" text="Fecha" />
-                <TableColumn fx:id="colHits" prefWidth="120.5" text="Aciertos" />
-                  <TableColumn fx:id="colFaults" minWidth="4.5" prefWidth="144.5" text="Fallos" />
-                  <TableColumn fx:id="colRate" prefWidth="181.5" text="Tasa de aciertos" />
-              </columns>
-               <opaqueInsets>
-                  <Insets right="30.0" />
-               </opaqueInsets>
-            </TableView>
-         </children>
-         <opaqueInsets>
-            <Insets />
-         </opaqueInsets>
-      </Pane>
-      <HBox alignment="BOTTOM_RIGHT" prefHeight="65.0" prefWidth="607.0">
-         <opaqueInsets>
-            <Insets />
-         </opaqueInsets>
-         <children>
-            <GridPane alignment="BOTTOM_RIGHT" prefHeight="73.0" prefWidth="607.0">
-              <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-              </columnConstraints>
-              <rowConstraints>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints maxHeight="28.0" minHeight="0.0" prefHeight="0.0" vgrow="SOMETIMES" />
-                <RowConstraints maxHeight="66.0" minHeight="10.0" prefHeight="66.0" vgrow="SOMETIMES" />
-              </rowConstraints>
+            <HBox alignment="CENTER" prefHeight="113.0" prefWidth="764.0" styleClass="cabecera">
                <children>
-                  <HBox alignment="CENTER_RIGHT" prefHeight="100.0" prefWidth="207.0" spacing="25.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                  <Label alignment="CENTER" style="-fx-font-size: 36;" text="Historial">
+                     <font>
+                        <Font size="36.0" />
+                     </font>
+                  </Label>
+               </children>
+            </HBox>
+            <HBox alignment="CENTER" prefHeight="54.0" prefWidth="607.0">
+               <children>
+                  <Label styleClass="text" text="Filtrar fecha: " />
+                  <DatePicker fx:id="dateFilter" />
+               </children>
+            </HBox>
+            <HBox alignment="TOP_CENTER" prefHeight="529.0" prefWidth="830.0">
+               <children>
+                  <TableView fx:id="tableHistory" prefHeight="491.0" prefWidth="763.0">
+                    <columns>
+                      <TableColumn fx:id="colDate" prefWidth="228.1666717529297" text="Fecha" />
+                      <TableColumn fx:id="colHits" prefWidth="172.8333282470703" text="Aciertos" />
+                        <TableColumn fx:id="colFaults" minWidth="4.5" prefWidth="159.33334350585938" text="Fallos" />
+                        <TableColumn fx:id="colRate" prefWidth="202.16665649414062" text="Tasa de aciertos" />
+                    </columns>
+                     <opaqueInsets>
+                        <Insets right="30.0" />
+                     </opaqueInsets>
+                  </TableView>
+               </children>
+            </HBox>
+            <HBox alignment="BOTTOM_RIGHT" prefHeight="87.0" prefWidth="764.0">
+               <opaqueInsets>
+                  <Insets />
+               </opaqueInsets>
+               <children>
+                  <HBox alignment="CENTER_RIGHT" prefHeight="57.0" prefWidth="403.0" spacing="25.0">
                      <children>
-                        <Button fx:id="bVolver" minWidth="80.0" mnemonicParsing="false" onAction="#onVolver" prefWidth="100.0" style="-fx-background-color: #0685BC;" text="Volver" textFill="WHITE">
+                        <Button fx:id="bVolver" minWidth="80.0" mnemonicParsing="false" onAction="#onVolver" prefHeight="48.0" prefWidth="127.0" styleClass="button-cancelar" text="Volver" textFill="WHITE">
                            <font>
                               <Font size="14.0" />
                            </font>
@@ -86,10 +61,13 @@
                      <padding>
                         <Insets right="20.0" />
                      </padding>
+                     <HBox.margin>
+                        <Insets bottom="10.0" top="10.0" />
+                     </HBox.margin>
                   </HBox>
                </children>
-            </GridPane>
+            </HBox>
          </children>
-      </HBox>
+      </VBox>
    </children>
 </VBox>
