--- a/src/AplicacionNavegacion/VentanaRegistroFXML.fxml
+++ b/src/AplicacionNavegacion/VentanaRegistroFXML.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import java.lang.String?>
+<?import java.net.URL?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.DatePicker?>
@@ -15,7 +16,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox alignment="CENTER" styleClass="root" stylesheets="@Registro.css" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="AplicacionNavegacion.VentanaRegistroController">
+<VBox alignment="CENTER" styleClass="root" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="AplicacionNavegacion.VentanaRegistroController">
    <children>
       <StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="555.0" prefWidth="809.0">
          <children>
@@ -108,4 +109,8 @@
          </children>
       </StackPane>
    </children>
+   <stylesheets>
+      <URL value="@Registro.css" />
+      <URL value="@../estilos/Registro.css" />
+   </stylesheets>
 </VBox>
