--- a/src/AplicacionNavegacion/VentanaRegistroFXML.fxml
+++ b/src/AplicacionNavegacion/VentanaRegistroFXML.fxml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import java.lang.String?>
-<?import java.net.URL?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.DatePicker?>
@@ -16,7 +15,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox alignment="CENTER" styleClass="root" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="AplicacionNavegacion.VentanaRegistroController">
+<VBox alignment="CENTER" styleClass="root" stylesheets="@Registro.css" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="AplicacionNavegacion.VentanaRegistroController">
    <children>
       <StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="555.0" prefWidth="809.0">
          <children>
@@ -89,15 +88,8 @@
                   </HBox>
                   <HBox alignment="BOTTOM_RIGHT" prefHeight="153.0" prefWidth="720.0" spacing="20.0">
                      <children>
-                        <Button fx:id="bAccept" mnemonicParsing="false" onAction="#handleBAcceptOnAction" styleClass="button-aceptar" text="REGISTRARSE">
-                           <graphic>
-                              <ImageView fitHeight="36.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true" />
-                           </graphic>
-                        </Button>
+                        <Button fx:id="bAccept" mnemonicParsing="false" onAction="#handleBAcceptOnAction" styleClass="button-aceptar" text="REGISTRARSE" />
                         <Button fx:id="bCancel" mnemonicParsing="false" onAction="#handleCancel" styleClass="button-cancelar" text="CANCELAR">
-                           <graphic>
-                              <ImageView fitHeight="35.0" fitWidth="33.0" pickOnBounds="true" preserveRatio="true" />
-                           </graphic>
                            <HBox.margin>
                               <Insets right="30.0" />
                            </HBox.margin>
@@ -109,8 +101,4 @@
          </children>
       </StackPane>
    </children>
-   <stylesheets>
-      <URL value="@Registro.css" />
-      <URL value="@../estilos/Registro.css" />
-   </stylesheets>
 </VBox>
